# advoxs

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/agents/: .dockerignore  .env.example  API_AGENTS.md  Dockerfile  docker-compose.yml  main.py  print_graph.py  pyproject.toml  test_agents.py
apps/agents/agents/: helpers.py  nodes.py  registry.py  tools.py  workflow.py
apps/agents/agents/prompts/: condominial.md  contratos.md  direito_consumidor.md  secretaria.md
apps/agents/api/: routes.py
apps/agents/clients/: billing.py  ratelimit.py  retrieval.py  whatsapp.py
apps/agents/core/: logging.py
apps/agents/services/: call_agent.py  concat_messages.py  summarize.py  update_context.py
apps/agents/tests/: factories.py
apps/agents/tests/integration/: test_prompts.py
apps/agents/tests/unit/: conftest.py  test_billing_client.py  test_call_agent.py  test_graph_routing.py  test_helpers.py  test_nodes.py  test_ratelimit.py  test_retrieval_client.py  test_routes.py  test_summarize.py  test_tools.py  test_update_context.py  test_whatsapp_client.py
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_unique_kb_filename.py  0003_seed_credit_packages.py  0004_admin_audit_logs.py  0005_tenant_logo_filename.py  0006_conversation_summary.py  0007_message_delivery_status.py  0008_tenant_isolation_roles.py  0009_end_customer_billing.py  0010_conversation_human_last_seen.py  0011_conversation_is_test.py  0012_tenant_onboarding_completed.py  0013_fundacao_wallet_creditos.py  0014_insufficient_balance_policy.py  0015_agentes_por_tenant.py  0016_corrige_referencias_tools_prompts.py  0017_planos_assinatura.py  0018_billing_gate.py  0019_isencao_cobranca_cliente_final.py  0020_remove_insufficient_balance_policy.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  internal_deps.py
apps/api/app/clients/: agents.py  rag.py  whatsapp.py
apps/api/app/core/: config.py  crypto.py  db.py  platform_security.py  queue.py  redis.py  security.py
apps/api/app/models/: __init__.py  admin_audit_log.py  agent.py  billing.py  conversation.py  end_customer_billing.py  knowledge_base_file.py  message.py  platform_admin.py  subscription.py  tenant.py  user.py  whatsapp_number.py
apps/api/app/schemas/: admin_dashboard.py  admin_tenants.py  agents.py  auth.py  billing.py  conversations.py  dashboard.py  end_customer_billing.py  knowledge_base.py  onboarding.py  platform_admin.py  playground.py  profile.py  signup.py  whatsapp.py  whatsapp_connection.py
apps/api/app/services/: admin_dashboard.py  admin_tenants.py  agents_engine.py  auth.py  billing.py  conversations_usage.py  dashboard.py  default_agents.py  default_subscription.py  end_customer_billing.py  platform_admin_auth.py  playground.py  pricing.py  profile.py  signup_tokens.py  subscriptions.py  test_conversations.py  whatsapp_inbound.py
apps/api/scripts/: seed_dev.py  seed_platform_admin.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_agents_migration.py  test_rls_isolation.py
apps/api/tests/unit/: test_admin_dashboard.py  test_admin_dashboard_routes.py  test_admin_tenants_routes.py  test_admin_tenants_service.py  test_agents_client.py  test_agents_engine_service.py  test_agents_routes.py  test_auth_routes.py  test_billing_routes.py  test_billing_service.py  test_conversations_routes.py  test_conversations_usage_routes.py  test_conversations_usage_service.py  test_credit_packages_routes.py  test_crypto.py  test_db.py  test_deps.py  test_end_customer_billing_customers_routes.py  test_end_customer_billing_packages_routes.py  test_end_customer_billing_service.py  test_end_customer_billing_settings_routes.py  test_health.py  test_internal_deps.py  test_internal_end_customer_billing_routes.py  test_knowledge_base_routes.py  test_onboarding_routes.py  test_platform_admin_auth_routes.py  test_playground_routes.py  test_playground_service.py  test_pricing_service.py  test_profile_routes.py  test_profile_service.py  test_security.py  test_signup_routes.py  test_signup_tokens.py  test_stripe_tenant_webhook.py  test_stripe_webhook.py  test_subscriptions_service.py  test_tenant_dashboard.py  test_tenant_dashboard_routes.py  (+5 more)
apps/api_rag/: .dockerignore  .env.example  API.md  Dockerfile  constants.py  docker-compose.yml  main.py  pyproject.toml  teste.py
apps/api_rag/alembic/: env.py
apps/api_rag/alembic/versions/: 12d6347f0a05_add_id_driver.py  9428acb91486_esatdo_inicial.py  a1b2c3d4e5f6_add_tenant_id_documentos_usuario.py  c32de736dab0_add_id_drive.py
apps/api_rag/api/: security.py
apps/api_rag/api/routes/: health.py  retrievals.py
apps/api_rag/clients/: qdrant.py
apps/api_rag/database/: models.py  session.py
apps/api_rag/database/repositories/: documento.py
apps/api_rag/services/documents/: main.py
apps/api_rag/services/retrieval/: main.py
apps/api_rag/tests/: conftest.py
apps/api_rag/tests/unit/: test_documento_service.py  test_qdrant_client.py  test_routes.py  (+1 more)
apps/worker/: Dockerfile  pyproject.toml
apps/worker/app/: billing_gate.py  config.py  crypto.py  db.py  pricing.py  tables.py  worker.py
apps/worker/tests/: conftest.py
(+235 files in other folders)
