[project]
name = "api-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.4",
    "langchain-openai>=1.2.2",
    "langfuse>=4.9.0",
    "langgraph>=1.2.4",
    "langgraph-checkpoint-postgres>=3.1.0",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
