[project]
name = "advoxs-api"
version = "0.1.0"
description = "Advoxs — backend geral (tenants, usuarios, billing, KB, integracoes)"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    # bcrypt direto (passlib 1.7.x quebra com bcrypt>=4.1)
    "bcrypt>=4.1",
    "cryptography>=44.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.139.0",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.6",
    # arq exige redis<6 — manter alinhado com apps/worker
    "redis>=5.3.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "stripe>=10.0.0",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Migration 0015 clona, verbatim, os 4 prompts fixos de apps/agents (linhas
# de prosa longas por natureza) — exceção de line-length só pra esse arquivo,
# nunca pra código real.
"alembic/versions/0015_agentes_por_tenant.py" = ["E501"]
