[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "chonkie>=1.6.6",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
