[project]
name = "advoxs-api-rag"
version = "0.1.0"
description = "Advoxs — microservico de RAG: ingestao de documentos + retrieval hibrido"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "chonkie>=1.6.6",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "httpx>=0.28.1",
    "langchain>=1.3.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pdfplumber>=0.11.9",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "qdrant-client>=1.18.0",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
