[project]
name = "advoxs-worker"
version = "0.1.0"
description = "Advoxs — jobs assincronos (ingestao de KB, processamento de mensagens)"
requires-python = ">=3.12"
dependencies = [
    "arq>=0.28.0",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.2",
    "redis>=5.3.1",
    "sqlalchemy[asyncio]>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
